--- a/Backend/Authentication/package.json
+++ b/Backend/Authentication/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"npm index.js"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,17 @@
   },
   "homepage": "https://github.com/shaikhshahbaz4022/chummy-run-6992#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.1.0"
+    "mongoose": "^7.1.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^9.0.0"
   }
 }
