--- a/Backend/Chat-Server/package.json
+++ b/Backend/Chat-Server/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
