--- a/Backend/Video-Chat-Server/package.json
+++ b/Backend/Video-Chat-Server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
+    "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
 }
